// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/drafts/drafts_row should match snapshot for channel draft 1`] = `
<ContextProvider
  value={
    Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Subscription {
        "handleChangeWrapper": [Function],
        "listeners": Object {
          "notify": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": null,
      },
    }
  }
>
  <Memo(ChannelDraft)
    channel={
      Object {
        "id": "",
      }
    }
    channelUrl=""
    displayName=""
    draftId=""
    id={Object {}}
    isRemote={false}
    postPriorityEnabled={false}
    status={Object {}}
    type="channel"
    user={Object {}}
    value={Object {}}
  />
</ContextProvider>
`;

exports[`components/drafts/drafts_row should match snapshot for undefined channel 1`] = `
<ContextProvider
  value={
    Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Subscription {
        "handleChangeWrapper": [Function],
        "listeners": Object {
          "notify": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": null,
      },
    }
  }
>
  <Memo(ChannelDraft)
    channel={null}
    channelUrl=""
    displayName=""
    draftId=""
    id={Object {}}
    isRemote={false}
    postPriorityEnabled={false}
    status={Object {}}
    type="channel"
    user={Object {}}
    value={Object {}}
  />
</ContextProvider>
`;
